--- a/valheim.env
+++ b/valheim.env
@@ -8,10 +8,10 @@ PORT=2456
 SERVER_NAME=Karjalan server
 
 # Имя мира
-WORLD_NAME=Dedicated
+WORLD_NAME=Gavnopoli
 
 # Пароль для подключения к серверу
-SERVER_PASSWORD=0
+SERVER_PASSWORD=Karjala1212
 
 # Часовой пояс
 TIMEZONE=Europe/Moscow
